--- a/index.html
+++ b/index.html
@@ -926,7 +926,7 @@
               <h2 class="cs_footer_widget_title">Subscribe Newsletter</h2>
               <div class="cs_newsletter position-relative">
                 <input type="text" placeholder="Your email address" class="cs_form_field">
-                <a href="contact.html" class="cs_btn cs_bg_accent cs_send">
+                <a href="#" class="cs_btn cs_bg_accent cs_send">
                   Send
                   <svg width="11" height="11" viewBox="0 0 11 11" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path
@@ -942,7 +942,7 @@
         <div class="cs_height_110 cs_height_lg_50"></div>
       </div>
       <div class="container cs_copyright_text cs_text_white text-center">
-        Copyright 2024.<a href="#" target="_blank"
+        Copyright © 2025 AdvantangeQ. All Rights Reserved.<a href="#" target="_blank"
           class="cs_site_link cs_text_accent"> </a>
       </div>
     </div>
