update contact page

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Domo home</title>
+  <title>AdVantageQ - Homepage</title>
   <!-- Favicon Icon -->
   <link rel="icon" href="images/favicon.png">
   <!-- CSS plugins files -->
@@ -49,7 +49,7 @@
                     <li><a href="#">Pricing</a></li>
                     <li><a href="#" >Blog</a></li>
                     <li><a href="#">Affiliate Program</a>
-                    <li><a href="#">Contact us</a></li>
+                    <li><a href="contact.html">Contact us</a></li>
                 </ul>
             </nav>
           </div>
@@ -897,7 +897,7 @@
                 <li><a href="#">Pricing</a></li>
                 <li><a href="#">Blog</a></li>
                 <li><a href="#">Affiliate Program</a>
-                </li><li><a href="#">Contact us</a></li>
+                </li><li><a href="contact.html">Contact us</a></li>
               </ul>
             </div>
             <div class="cs_height_0 cs_height_lg_30"></div>
