--- a/contact.html
+++ b/contact.html
@@ -7,12 +7,13 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Contact</title>
+  <title>AdVantageQ - Contact us</title>
   <!-- Favicon Icon -->
-  <link rel="icon" href="images/favicon.svg">
+  <link rel="icon" href="images/favicon.png">
   <!-- CSS plugins files -->
   <link rel="stylesheet" href="css/bootstrap.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"/>
+  <link rel="stylesheet" href="fonts/sansation-font.css">
   <link rel="stylesheet" href="css/slick.css">
   <link rel="stylesheet" href="css/animate.css">
   <!-- Custome CSS -->
@@ -37,18 +38,18 @@
         <div class="cs_main_header_in">
           <div class="cs_main_header_left">
             <a class="cs_site_branding" href="index.html">
-              <span>D</span>omo Logo
+             <img src="images/site-logo.png" alt="site-logo">
             </a>
           </div>
           <div class="cs_main_header_center">
-             <nav class="cs_nav cs_medium cs_primary_font">
+            <nav class="cs_nav cs_medium cs_primary_font">
                 <ul class="cs_nav_list cs_onepage_nav">
-                    <li><a href="index.html" >Home</a></li>
-                    <li><a href="features.html" >Features</a></li>
-                    <li><a href="pricing.html" >Pricing</a></li>
-                    <li><a href="integartion.html">Integration</a></li>
-                    <li><a href="design-website.html">Website Design</a>
-                    <li><a href="contact.html" class="active">Contact</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="#">How It Works</a></li>
+                    <li><a href="#">Pricing</a></li>
+                    <li><a href="#" >Blog</a></li>
+                    <li><a href="#">Affiliate Program</a>
+                    <li><a href="contact.html" class="active">Contact us</a></li>
                 </ul>
             </nav>
           </div>
@@ -69,21 +70,46 @@
     <div class="cs_contact" id="contact">
       <div class="cs_height_143"></div>
       <div class="container">
-        <div class="row align-items-center">
+        <div class="row">
           <div class="col-xl-6 wow fadeInLeft" data-wow-duration="0.8s" data-wow-delay="0.2s">
-            <div class="cs_contact_thumb text-center">
-              <img src="images/contact_left.png" alt="">
-            </div>
-          </div>
-          <div class="col-xl-6 wow fadeIn" data-wow-duration="0.8s" data-wow-delay="0.2s">
             <div class="cs_section_heading cs_style_1">
               <p class="cs_section_subtitle cs_text_accent">Contact Us</p>
               <h2 class="cs_section_title mb-0">Please contact us today  <br>to get in touch!</h2>
+              <div class="contact-us-content">
+                <img src="images/contact-us.svg" alt="contact-us">
+                <div class="support">
+                  <ul>
+                    <li><a href="tel:(480) 555-0103">(480) 555-0103</a></li>
+                    <li><a href="mailto:support@email.com">www.support@email.com</a></li>
+                  </ul>
+                </div>
+                <div class="cs_social_btn cs_style_1 d-flex">
+                  <a href="https://www.facebook.com/" target="_blank">
+                    <i class="fa-brands fa-facebook-f"></i>
+                  </a>
+                  <a href="https://www.facebook.com/" target="_blank">
+                    <i class="fa-brands fa-twitter"></i>
+                  </a>
+                  <a href="https://www.facebook.com/" target="_blank">
+                    <i class="fa-brands fa-linkedin-in"></i>
+                  </a>
+                  <a href="https://www.facebook.com/" target="_blank">
+                    <i class="fa-brands fa-instagram"></i>
+                  </a>
+                </div>
+              </div>
             </div>
+            
+          </div>
+          <div class="col-xl-6 wow fadeIn" data-wow-duration="0.8s" data-wow-delay="0.2s">
             <div class="cs_height_50 cs_height_lg_40"></div>
             <form id="cs_form" class="row">
               <div class="col-sm-6">
-                <input type="text" class="cs_form_field" placeholder="Full Name*" required="">
+                <input type="text" class="cs_form_field" placeholder="Name*" required="">
+                <div class="cs_height_30 cs_height_lg_30"></div>
+              </div>
+              <div class="col-sm-6">
+                <input type="text" class="cs_form_field" placeholder="Business Name*" required="">
                 <div class="cs_height_30 cs_height_lg_30"></div>
               </div>
               <div class="col-sm-6">
@@ -91,16 +117,8 @@
                 <div class="cs_height_30 cs_height_lg_30"></div>
               </div>
               <div class="col-sm-6">
-                <input type="text" class="cs_form_field" placeholder="Mobile*" required="">
+                <input type="text" class="cs_form_field" placeholder="Phone*" required="">
                 <div class="cs_height_30 cs_height_lg_30"></div>
-              </div>
-              <div class="col-sm-6">
-                <input type="text" class="cs_form_field" placeholder="Subject*" required="">
-                <div class="cs_height_30 cs_height_lg_30"></div>
-              </div>
-             <div class="col-lg-12">
-                  <input type="text" class="cs_form_field" placeholder="Restaurant Name*" required="">
-                  <div class="cs_height_30 cs_height_lg_30"></div>
               </div>
                <div class="col-lg-12">
                 <textarea class="cs_form_field" rows="4" cols="50" placeholder="Enter your message here..."></textarea>
@@ -432,10 +450,10 @@
           <div class="col-lg-3 col-xl-4">
             <div class="cs_footer_widget">
               <div class="cs_text_field">
-                 <a class="cs_site_branding" href="index.html">
-                    <span>D</span>omo Logo
+                 <a class="cs_site_branding mb-4" href="index.html">
+                  <img src="images/footer-logo.png" alt="site-logo">
                  </a>
-                <p class="cs_text_white mb-0">
+                <p class="cs_text_white mb-0 ">
                   Ours Pos Software is the ultimate solution designed to transform your business operations into a
                   streamlined and
                   efficient powerhouse. With a focus on simplicity, versatility, and cutting-edge technology.
@@ -465,21 +483,12 @@
             <div class="cs_footer_widget">
               <h2 class="cs_footer_widget_title">Quick Links</h2>
               <ul class="cs_footer_widget_nav cs_mp0">
-                <li>
-                  <a href="#">Home</a>
-                </li>
-                <li>
-                  <a href="about.html">Features</a>
-                </li>
-                <li>
-                  <a href="pricing.html">Pricing</a>
-                </li>
-                <li>
-                  <a href="blog.html">Blog</a>
-                </li>
-                <li>
-                  <a href="contact.html">Contact</a>
-                </li>
+                <li><a href="index.html" class="active">Home</a></li>
+                <li><a href="#">How It Works</a></li>
+                <li><a href="#">Pricing</a></li>
+                <li><a href="#">Blog</a></li>
+                <li><a href="#">Affiliate Program</a>
+                </li><li><a href="contact.html">Contact us</a></li>
               </ul>
             </div>
             <div class="cs_height_0 cs_height_lg_30"></div>
@@ -508,7 +517,7 @@
               <h2 class="cs_footer_widget_title">Subscribe Newsletter</h2>
               <div class="cs_newsletter position-relative">
                 <input type="text" placeholder="Your email address" class="cs_form_field">
-                <a href="contact.html" class="cs_btn cs_bg_accent cs_send">
+                <a href="#" class="cs_btn cs_bg_accent cs_send">
                   Send
                   <svg width="11" height="11" viewBox="0 0 11 11" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path
@@ -524,7 +533,7 @@
         <div class="cs_height_110 cs_height_lg_50"></div>
       </div>
       <div class="container cs_copyright_text cs_text_white text-center">
-        Copyright 2024.<a href="#" target="_blank"
+        Copyright © 2025 AdvantangeQ. All Rights Reserved.<a href="#" target="_blank"
           class="cs_site_link cs_text_accent"> </a>
       </div>
     </div>
