--- a/how-it-works.html
+++ b/how-it-works.html
@@ -60,7 +60,7 @@
 
     <div class="cs_content">
         <!-- inner banner section -->
-        <section class="inner-bnr">
+        <section class="inner-bnr how-it-works-bnr">
             <div class="container">
                 <div class="inner-heading">
                     <h2>How it Works</h2>
@@ -150,14 +150,8 @@
         <!-- How the AdVantageQ System Works -->
 
 
-        <!--  -->
-        <section class=""></section>
-        <!--  -->
+    
 
-
-        Git Login: 
-        frontenddev344@gmail.com
-        frontenddev288
 
 
 
