--- a/how-it-works.html
+++ b/how-it-works.html
@@ -70,87 +70,153 @@
         <!-- inner banner section -->
 
 
-        <!-- How the AdVantageQ System Works -->
-        <section class="system-works-wrapper py-5">
+
+        <section class="hero--reverse">
+            <div class="sec-heading">
+                <h3>How the AdVantageQ System Works</h3>
+                <p>We’ve made it simple to grow your business through premium direct mail that actually gets opened and
+                    seen. Here’s how:
+
+                </p>
+            </div>
             <div class="container">
-                <div class="system-works-inner">
-                    <div class="sec-heading">
-                        <h3>How the AdVantageQ System Works</h3>
-                        <p>We’ve made it simple to grow your business through premium direct mail that actually gets
-                            opened
-                            and seen. Here’s how:
-                        </p>
+                <div class="reverse-content">
+                    <div class="row">
+                        <div class="col-lg-6">
+                            <div class="expectimg">
+                                <img src="images/img/code.jpg" alt="">
+                            </div>
+                        </div>
+                        <div class="col-lg-6">
+                            <div class="expect-text">
+                                <h3>Pick Your ZIP Code
+                                </h3>
+                                <p>Find out what to expect from start to finish with your claim. From how to prepare
+                                    your device for collection, updates to expect during your claim and how your device
+                                    will be safely returned to you. Find out what to expect from start to finish with
+                                    your claim. From how to prepare
+                                    your device for collection, updates to expect during your claim and how your device
+                                    will be safely returned to you.
 
+                                </p>
+                            </div>
+                        </div>
                     </div>
-                    <!-- Steps: -->
-                    <div class="system-works-inner-box">
-                        <div class="row">
-                            <div class="col-md-4">
-                                <div class="Steps-card-wrapper">
-                                    <div>
-                                        <div class="your-icon">
-                                            <i class="fas fa-map-marker-alt "></i>
-                                        </div>
-                                        <h3>Pick Your ZIP Code</h3>
-                                        <p>View available ZIP codes and select your area of coverage.</p>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-md-4">
-                                <div class="Steps-card-wrapper">
-                                    <div>
-                                        <div class="your-icon">
-                                            <i class="fas fa-user-shield "></i>
-                                        </div>
-                                        <h3>Industry Exclusivity
-                                        </h3>
-                                        <p>Only one business per industry is allowed per ZIP code—yours.</p>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-md-4">
-                                <div class="Steps-card-wrapper">
-                                    <div>
-                                        <div class="your-icon"><i class="fas fa-pencil-ruler "></i></div>
-                                        <h3>Design Your Ad</h3>
-                                        <p>Work with our in-house team or submit your own print-ready design.</p>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-md-4">
-                                <div class="Steps-card-wrapper">
-                                    <div>
-                                        <div class="your-icon">
-                                            <i class="fas fa-chart-line "></i>
-                                        </div>
-                                        <h3>Trackable Engagement</h3>
-                                        <p>We provide a QR code and dedicated call tracking number to measure results.
-                                        </p>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-md-4">
-                                <div class="Steps-card-wrapper">
+                </div>
+                <div class="reverse-content second-expet">
+                    <div class="row">
+                        <div class="col-lg-6">
+                            <div class="expect-text">
+                                <h3>Industry Exclusivity
+                                </h3>
+                                <p>Find out what to expect from start to finish with your claim. From how to prepare
+                                    your device for collection, updates to expect during your claim and how your device
+                                    will be safely returned to you. Find out what to expect from start to finish with
+                                    your claim. From how to prepare
+                                    your device for collection, updates to expect during your claim and how your device
+                                    will be safely returned to you.
 
-                                    <div>
-                                        <div class="your-icon"><i class="fas fa-paper-plane "></i></div>
-                                        <h3>Get Delivered Monthly
-                                        </h3>
-                                        <p>Your ad is sent in our bold, full-color envelope to 5,000+ homes.</p>
-                                    </div>
-                                </div>
+                                </p>
+                            </div>
+                        </div>
+                        <div class="col-lg-6">
+                            <div class="expectimg">
+                                <img src="images/img/Industr.avif" alt="">
                             </div>
                         </div>
 
                     </div>
-                    <!-- Steps: -->
                 </div>
+                <div class="reverse-content">
+                    <div class="row">
+                        <div class="col-lg-6">
+                            <div class="expectimg">
+                                <img src="images/img/add.jpg" alt="">
+                            </div>
+                        </div>
+                        <div class="col-lg-6">
+                            <div class="expect-text">
+                                <h3>Design Your Ad
+
+                                </h3>
+                                <p>Find out what to expect from start to finish with your claim. From how to prepare
+                                    your device for collection, updates to expect during your claim and how your device
+                                    will be safely returned to you. Find out what to expect from start to finish with
+                                    your claim. From how to prepare
+                                    your device for collection, updates to expect during your claim and how your device
+                                    will be safely returned to you.
+
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="reverse-content second-expet">
+                    <div class="row">
+                        <div class="col-lg-6">
+                            <div class="expect-text">
+                                <h3> Trackable Engagement
+
+                                </h3>
+                                <p>Find out what to expect from start to finish with your claim. From how to prepare
+                                    your device for collection, updates to expect during your claim and how your device
+                                    will be safely returned to you. Find out what to expect from start to finish with
+                                    your claim. From how to prepare
+                                    your device for collection, updates to expect during your claim and how your device
+                                    will be safely returned to you.
+
+                                </p>
+                            </div>
+                        </div>
+                        <div class="col-lg-6">
+                            <div class="expectimg">
+                                <img src="images/img/how-it-works-hero.jpg" alt="">
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+                <div class="reverse-content">
+                    <div class="row">
+                        <div class="col-lg-6">
+                            <div class="expectimg">
+                                <img src="images/img/Get-Delivered.jpg" alt="">
+                            </div>
+                        </div>
+                        <div class="col-lg-6">
+                            <div class="expect-text">
+                                <h3>Get Delivered Monthly
+                                </h3>
+                                <p>Find out what to expect from start to finish with your claim. From how to prepare
+                                    your device for collection, updates to expect during your claim and how your device
+                                    will be safely returned to you. Find out what to expect from start to finish with
+                                    your claim. From how to prepare
+                                    your device for collection, updates to expect during your claim and how your device
+                                    will be safely returned to you.
+
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="reverse-btn">
+                    <a href="#" class="cs_btn">Explore ZIP Codes Now</a>
+                    <span>or</span>
+                    <a href="#" class="cs_btn"> Get Started</a>
+                </div>
+
+
+
             </div>
         </section>
-        <!-- How the AdVantageQ System Works -->
 
 
-    
+
+
+
+
+
 
 
 
