--- a/how-it-works.html
+++ b/how-it-works.html
@@ -131,7 +131,7 @@
                     <div class="row">
                         <div class="col-lg-6">
                             <div class="expectimg">
-                                <img src="images/img/add.jpg" alt="">
+                                <img src="images/img/add.avif" alt="">
                             </div>
                         </div>
                         <div class="col-lg-6">
