--- a/contact.html
+++ b/contact.html
@@ -38,7 +38,7 @@
             <nav class="cs_nav cs_medium cs_primary_font">
               <ul class="cs_nav_list cs_onepage_nav">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="#">How It Works</a></li>
+                <li><a href="how-it-works.html">How It Works</a></li>
                 <li><a href="#">Pricing</a></li>
                 <li><a href="#">Blog</a></li>
                 <li><a href="#">Affiliate Program</a>
