--- a/how-it-works.html
+++ b/how-it-works.html
@@ -84,7 +84,7 @@
                     <div class="row">
                         <div class="col-lg-6">
                             <div class="expectimg">
-                                <img src="images/img/code.jpg" alt="">
+                                <img src="images/img/code.webp" alt="">
                             </div>
                         </div>
                         <div class="col-lg-6">
