--- a/how-it-works.html
+++ b/how-it-works.html
@@ -41,7 +41,7 @@
                                 <li><a href="index.html">Home</a></li>
                                 <li><a href="#" class="active">How It Works</a></li>
                                 <li><a href="#">Pricing</a></li>
-                                <li><a href="#">Blog</a></li>
+                                <li><a href="blog.html">Blog</a></li>
                                 <li><a href="#">Affiliate Program</a>
                                 <li><a href="contact.html">Contact us</a></li>
                             </ul>
