--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     <li><a href="index.html" class="active">Home</a></li>
                     <li><a href="how-it-works.html">How It Works</a></li>
                     <li><a href="#">Pricing</a></li>
-                    <li><a href="#" >Blog</a></li>
+                    <li><a href="blog.html" >Blog</a></li>
                     <li><a href="#">Affiliate Program</a>
                     <li><a href="contact.html">Contact us</a></li>
                 </ul>
