--- a/why-us.html
+++ b/why-us.html
@@ -68,7 +68,7 @@
             </div>
         </section>
         <!-- inner banner section -->
-
+        <!-- why-us -->
         <section class="why-us py-5">
             <div class="container">
                 <div class="sec-heading">
@@ -114,7 +114,84 @@
                 </div>
             </div>
         </section>
+        <!-- why-us -->
 
+        <!-- Benefits  -->
+        <section class="the-benefits py-5">
+            <div class="container">
+                <div class="sec-heading">
+                    <h3>The Benefits </h3>
+                    <p>Discover the key advantages that make AdVantageQ the smarter choice for local business marketing.
+                    </p>
+                </div>
+                <div class="the-benefits-inner">
+                    <div class="row">
+                        <div class="col-md-4">
+                            <div class="benefits-list-inner">
+                                <div class="benefits-img">
+                                    <img src="images/img/High-Income.avif" alt="High">
+                                </div>
+                                <div class="benefits-content">
+                                    <h4> High-income home targeting
+                                    </h4>
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="benefits-list-inner">
+                                <div class="benefits-img">
+                                    <img src="images/img/High-Income.avif" alt="High">
+                                </div>
+                                <div class="benefits-content">
+                                    <h4> No wasted impressions
+                                    </h4>
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="benefits-list-inner">
+                                <div class="benefits-img">
+                                    <img src="images/img/High-Income.avif" alt="High">
+                                </div>
+                                <div class="benefits-content">
+                                    <h4> Done-for-you creative
+
+                                    </h4>
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="benefits-list-inner">
+                                <div class="benefits-img">
+                                    <img src="images/img/High-Income.avif" alt="High">
+                                </div>
+                                <div class="benefits-content">
+                                    <h4> Exclusivity creates urgency
+                                    </h4>
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="benefits-list-inner">
+                                <div class="benefits-img">
+                                    <img src="images/img/High-Income.avif" alt="High">
+                                </div>
+                                <div class="benefits-content">
+                                    <h4> Better engagement than coupon books </h4>
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Benefits  -->
 
 
 
