--- a/why-us.html
+++ b/why-us.html
@@ -141,7 +141,7 @@
                         <div class="col-md-4">
                             <div class="benefits-list-inner">
                                 <div class="benefits-img">
-                                    <img src="images/img/High-Income.avif" alt="High">
+                                    <img src="images/img/impressions.jpg" alt="High">
                                 </div>
                                 <div class="benefits-content">
                                     <h4> No wasted impressions
@@ -153,7 +153,7 @@
                         <div class="col-md-4">
                             <div class="benefits-list-inner">
                                 <div class="benefits-img">
-                                    <img src="images/img/High-Income.avif" alt="High">
+                                    <img src="images/img/Done-for-you.jpg" alt="High">
                                 </div>
                                 <div class="benefits-content">
                                     <h4> Done-for-you creative
@@ -166,7 +166,7 @@
                         <div class="col-md-4">
                             <div class="benefits-list-inner">
                                 <div class="benefits-img">
-                                    <img src="images/img/High-Income.avif" alt="High">
+                                    <img src="images/img/Exclusivity.jpg" alt="High">
                                 </div>
                                 <div class="benefits-content">
                                     <h4> Exclusivity creates urgency
@@ -178,7 +178,7 @@
                         <div class="col-md-4">
                             <div class="benefits-list-inner">
                                 <div class="benefits-img">
-                                    <img src="images/img/High-Income.avif" alt="High">
+                                    <img src="images/img/Better.jpg" alt="High">
                                 </div>
                                 <div class="benefits-content">
                                     <h4> Better engagement than coupon books </h4>
@@ -186,7 +186,6 @@
                                 </div>
                             </div>
                         </div>
-
                     </div>
                 </div>
             </div>
