--- a/why-us.html
+++ b/why-us.html
@@ -187,6 +187,9 @@
                             </div>
                         </div>
                     </div>
+                    <div class="reverse-btn">
+                        <a href="#" class="cs_btn">See Pricing & Availability</a>
+                    </div>
                 </div>
             </div>
         </section>
