--- a/blog.html
+++ b/blog.html
@@ -77,7 +77,7 @@
           <div class="categories">
             <ul class="tabs">
               <li class="tab-link current" data-tab="tab-1">All</li>
-              <li class="tab-link " data-tab="tab-2">Direct Mail Tips,</li>
+              <li class="tab-link " data-tab="tab-2">Direct Mail Tips</li>
               <li class="tab-link" data-tab="tab-3">Local Marketing</li>
               <li class="tab-link" data-tab="tab-4">Small Business Growth</li>
               <li class="tab-link" data-tab="tab-5">Case Studies </li>
@@ -90,7 +90,7 @@
                       <div class="blog-post-img">
                         <img src="images/img/general-img1.jpg" alt="">
                         <div class="post-meta-category">
-                          <a href="#">Marketing</a>
+                          <a href="#" >Marketing</a>
                         </div>
                       </div>
                       <div class="blog-post-info">
