--- a/contact.html
+++ b/contact.html
@@ -39,9 +39,9 @@
               <ul class="cs_nav_list cs_onepage_nav">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="how-it-works.html">How It Works</a></li>
-                <li><a href="#">Pricing</a></li>
-                <li><a href="#">Blog</a></li>
-                <li><a href="#">Affiliate Program</a>
+                <li><a href="pricing.html">Pricing</a></li>
+                <li><a href="blog.html">Blog</a></li>
+                <li><a href="affiliate-program.html">Affiliate Program</a>
                 <li><a href="contact.html" class="active">Contact us</a></li>
               </ul>
             </nav>
