--- a/how-it-works.html
+++ b/how-it-works.html
@@ -39,10 +39,10 @@
                         <nav class="cs_nav cs_medium cs_primary_font">
                             <ul class="cs_nav_list cs_onepage_nav">
                                 <li><a href="index.html">Home</a></li>
-                                <li><a href="#" class="active">How It Works</a></li>
-                                <li><a href="#">Pricing</a></li>
+                                <li><a href="how-it-works.html" class="active">How It Works</a></li>
+                                <li><a href="pricing.html">Pricing</a></li>
                                 <li><a href="blog.html">Blog</a></li>
-                                <li><a href="#">Affiliate Program</a>
+                                <li><a href="affiliate-program.html">Affiliate Program</a>
                                 <li><a href="contact.html">Contact us</a></li>
                             </ul>
                         </nav>
