--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <ul class="cs_nav_list cs_onepage_nav">
                     <li><a href="index.html" class="active">Home</a></li>
                     <li><a href="how-it-works.html">How It Works</a></li>
-                    <li><a href="#">Pricing</a></li>
+                    <li><a href="pricing.html">Pricing</a></li>
                     <li><a href="blog.html" >Blog</a></li>
                     <li><a href="affiliate-program.html">Affiliate Program</a>
                     <li><a href="contact.html">Contact us</a></li>
