--- a/blog.html
+++ b/blog.html
@@ -75,6 +75,7 @@
       <div class="container">
         <div class="blog-sec-inner">
           <div class="categories">
+           <div class="tabs-wrapper">
             <ul class="tabs">
               <li class="tab-link current" data-tab="tab-1">All</li>
               <li class="tab-link " data-tab="tab-2">Direct Mail Tips</li>
@@ -82,6 +83,7 @@
               <li class="tab-link" data-tab="tab-4">Small Business Growth</li>
               <li class="tab-link" data-tab="tab-5">Case Studies </li>
             </ul>
+           </div>
             <div id="tab-1" class="tab-content current">
               <div class="pgsel_blogpost">
                 <div class="row">
