--- a/blog-details.html
+++ b/blog-details.html
@@ -40,7 +40,7 @@
                             <ul class="cs_nav_list cs_onepage_nav">
                                 <li><a href="index.html">Home</a></li>
                                 <li><a href="how-it-works.html">How It Works</a></li>
-                                <li><a href="#">Pricing</a></li>
+                                <li><a href="pricing.html">Pricing</a></li>
                                 <li><a href="blog.html" class="active">Blog</a></li>
                                 <li><a href="#">Affiliate Program</a>
                                 <li><a href="contact.html">Contact us</a></li>
