--- a/blog.html
+++ b/blog.html
@@ -75,24 +75,26 @@
       <div class="container">
         <div class="blog-sec-inner">
           <div class="categories">
-           <div class="tabs-wrapper">
-            <ul class="tabs">
-              <li class="tab-link current" data-tab="tab-1">All</li>
-              <li class="tab-link " data-tab="tab-2">Direct Mail Tips</li>
-              <li class="tab-link" data-tab="tab-3">Local Marketing</li>
-              <li class="tab-link" data-tab="tab-4">Small Business Growth</li>
-              <li class="tab-link" data-tab="tab-5">Case Studies </li>
-            </ul>
-           </div>
+            <div class="tabs-wrapper">
+              <ul class="tabs">
+                <li class="tab-link current" data-tab="tab-1">All</li>
+                <li class="tab-link " data-tab="tab-2">Direct Mail Tips</li>
+                <li class="tab-link" data-tab="tab-3">Local Marketing</li>
+                <li class="tab-link" data-tab="tab-4">Small Business Growth</li>
+                <li class="tab-link" data-tab="tab-5">Case Studies </li>
+              </ul>
+            </div>
             <div id="tab-1" class="tab-content current">
               <div class="pgsel_blogpost">
                 <div class="row">
                   <div class="col-lg-4 col-md-6 col-sm-12">
                     <div class="blog-post">
                       <div class="blog-post-img">
-                        <img src="images/img/general-img1.jpg" alt="">
+                        <a href="blog-details.html">
+                          <img src="images/img/general-img1.jpg" alt="">
+                        </a>
                         <div class="post-meta-category">
-                          <a href="#" >Marketing</a>
+                          <a href="#">Marketing</a>
                         </div>
                       </div>
                       <div class="blog-post-info">
@@ -103,7 +105,7 @@
                           delectus aliquam dignissimos, explicabo inventore natus impedit facere velit debitis sunt
                           voluptate animi dolores ea provident! Laboriosam, voluptate.</p>
                         <div class="blog-btn">
-                          <a href="#" class="">Read More</a>
+                          <a href="blog-details.html" class="">Read More</a>
                         </div>
                       </div>
                     </div>
@@ -159,7 +161,7 @@
                     <a href="#">3</a>
                     <a href="#">4</a>
                     <a href="#">5</a>
-                    <a href="#" class="next"><i class="fa-solid fa-angles-right"></i>  </a>
+                    <a href="#" class="next"><i class="fa-solid fa-angles-right"></i> </a>
                   </div>
 
                 </div>
