--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     <li><a href="how-it-works.html">How It Works</a></li>
                     <li><a href="pricing.html">Pricing</a></li>
                     <li><a href="blog.html" >Blog</a></li>
-                    <li><a href="affiliate-program.html">Affiliate Program</a>
+                    <li><a href="">Affiliate Program</a>
                     <li><a href="contact.html">Contact us</a></li>
                 </ul>
             </nav>
