--- a/Industries-we-serve.html
+++ b/Industries-we-serve.html
@@ -271,7 +271,7 @@
                             </div>
                         </div>
                         <div class="blog-btn categories-btn">
-                            <a href="#" class="">Check Availability in Your ZIP Code</a>
+                            <a href="pricing.html" class="">Check Availability in Your ZIP Code</a>
                         </div>
                     </div>
                 </div>
