--- a/blog-details.html
+++ b/blog-details.html
@@ -72,27 +72,38 @@
         <section class="blog-details-section py-5">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-8">
+                    <div class="col-lg-8">     
                         <div class="blog-details-wrapper">
                             <div class="blog-img">
                                 <img src="images/img/blog3.jpg" alt="blog">
                             </div>
                             <div class="blog-content-details">
                                 <h4>Direct Mail Isn’t Dead—It’s Smart</h4>
-                                <strong>Jul 13, 2024</strong>
                                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laboriosam dolore nulla
                                     cumque delectus aliquam dignissimos, explicabo inventore natus impedit facere velit
-                                    debitis sunt voluptate animi dolores ea provident! Laboriosam, voluptate.</p>
-                            </div>
-                        </div>
-                        <div class="blog-details-wrapper">
-                            <div class="blog-img">
-                                <img src="images/img/blog3.jpg" alt="blog">
-                            </div>
-                            <div class="blog-content-details">
-                                <h4>Direct Mail Isn’t Dead—It’s Smart</h4>
-                                <strong>Jul 13, 2024</strong>
-                                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laboriosam dolore nulla
+                                    debitis sunt voluptate animi dolores ea provident! Laboriosam, voluptate.
+                                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laboriosam dolore nulla
+                                    cumque delectus aliquam dignissimos, explicabo inventore natus impedit facere velit
+                                    debitis sunt voluptate animi dolores ea provident! Laboriosam, voluptate.
+                                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laboriosam dolore nulla
+                                    cumque delectus aliquam dignissimos, explicabo inventore natus impedit facere velit
+                                    debitis sunt voluptate animi dolores ea provident! Laboriosam, voluptate.
+                                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laboriosam dolore nulla
+                                    cumque delectus aliquam dignissimos, explicabo inventore natus impedit facere velit
+                                    debitis sunt voluptate animi dolores ea provident! Laboriosam, voluptate.
+                                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laboriosam dolore nulla
+                                    cumque delectus aliquam dignissimos, explicabo inventore natus impedit facere velit
+                                    debitis sunt voluptate animi dolores ea provident! Laboriosam, voluptate.
+                                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laboriosam dolore nulla
+                                    cumque delectus aliquam dignissimos, explicabo inventore natus impedit facere velit
+                                    debitis sunt voluptate animi dolores ea provident! Laboriosam, voluptate.
+                                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laboriosam dolore nulla
+                                    cumque delectus aliquam dignissimos, explicabo inventore natus impedit facere velit
+                                    debitis sunt voluptate animi dolores ea provident! Laboriosam, voluptate.
+                                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laboriosam dolore nulla
+                                    cumque delectus aliquam dignissimos, explicabo inventore natus impedit facere velit
+                                    debitis sunt voluptate animi dolores ea provident! Laboriosam, voluptate.
+                                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laboriosam dolore nulla
                                     cumque delectus aliquam dignissimos, explicabo inventore natus impedit facere velit
                                     debitis sunt voluptate animi dolores ea provident! Laboriosam, voluptate.</p>
                             </div>
