--- a/blog.html
+++ b/blog.html
@@ -98,7 +98,7 @@
                         </div>
                       </div>
                       <div class="blog-post-info">
-                        <h4>Direct Mail Isn’t Dead—It’s Smart</h4>
+                        <h4><a href="blog-details.html">Direct Mail Isn’t Dead—It’s Smart</a></h4>
                         <span>Jul 13, 2024</span>
 
                         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laboriosam dolore nulla cumque
@@ -113,13 +113,17 @@
                   <div class="col-lg-4 col-md-6 col-sm-12">
                     <div class="blog-post">
                       <div class="blog-post-img">
-                        <img src="images/img/blog3.jpg" alt="">
+                        <a href="blog-details.html">
+                          <img src="images/img/blog3.jpg" alt="">
+                        </a>
                         <div class="post-meta-category">
                           <a href="#">Business</a>
                         </div>
                       </div>
                       <div class="blog-post-info">
-                        <h4>How to Maximize ROI from Your Local Ads</h4>
+                        <h4><a href="blog-details.html">
+                            How to Maximize ROI from Your Local Ads
+                          </a></h4>
                         <span>Jul 13, 2024</span>
 
                         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laboriosam dolore nulla cumque
@@ -134,20 +138,22 @@
                   <div class="col-lg-4 col-md-6 col-sm-12">
                     <div class="blog-post">
                       <div class="blog-post-img">
-                        <img src="images/img/blog2.jpg" alt="">
+                        <a href="blog-details.html">
+                          <img src="images/img/blog2.jpg" alt="">
+                        </a>
                         <div class="post-meta-category">
                           <a href="#">Development</a>
                         </div>
                       </div>
                       <div class="blog-post-info">
-                        <h4>Why We Only Serve One Business Per Industry</h4>
+                        <h4><a href="blog-details.html">Why We Only Serve One Business Per Industry</a></h4>
                         <span>Jul 20, 2024</span>
 
                         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laboriosam dolore nulla cumque
                           delectus aliquam dignissimos, explicabo inventore natus impedit facere velit debitis sunt
                           voluptate animi dolores ea provident! Laboriosam, voluptate.</p>
                         <div class="blog-btn">
-                          <a href="#" class="">Read More</a>
+                          <a href="blog-details.html" class="">Read More</a>
                         </div>
                       </div>
                     </div>
