--- a/why-us.html
+++ b/why-us.html
@@ -188,7 +188,7 @@
                         </div>
                     </div>
                     <div class="reverse-btn">
-                        <a href="#" class="cs_btn">See Pricing & Availability</a>
+                        <a href="pricing.html" class="cs_btn">See Pricing & Availability</a>
                     </div>
                 </div>
             </div>
