--- a/blog-details.html
+++ b/blog-details.html
@@ -41,7 +41,7 @@
                                 <li><a href="index.html">Home</a></li>
                                 <li><a href="how-it-works.html">How It Works</a></li>
                                 <li><a href="pricing.html">Pricing</a></li>
-                                <li><a href="blog.html" class="active">Blog</a></li>
+                                <li><a href="blog.html">Blog</a></li>
                                 <li><a href="#">Affiliate Program</a>
                                 <li><a href="contact.html">Contact us</a></li>
                             </ul>
@@ -72,7 +72,7 @@
         <section class="blog-details-section py-5">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-8">     
+                    <div class="col-lg-8">
                         <div class="blog-details-wrapper">
                             <div class="blog-img">
                                 <img src="images/img/blog3.jpg" alt="blog">
